fixed posting and retrieving files using the backend API, added a script post.py to communicate with the API

--- a/API/TrainingAPI/templates/apiv1.html
+++ b/API/TrainingAPI/templates/apiv1.html
@@ -6,10 +6,10 @@
     <h1>Overview </h1>
     <ul>
         <li>
-            <a href="/apiv1/document_view/">Documents</a>
+            <a href="/apiv1/document_view">Documents</a>
         </li>
         <li>
-            <a href="/apiv1/train/">Train</a>
+            <a href="/apiv1/train">Train</a>
         </li>
     </ul>
 {% endblock %}
