--- a/API/TrainingAPI/templates/document_detail_view.html
+++ b/API/TrainingAPI/templates/document_detail_view.html
@@ -5,14 +5,14 @@
 {% block content %}
     <h1>Document Detail - {{document.title}} </h1>
     <p>
-        <a href="/apiv1/document_view/">Back to Documents</a>
+        <a href="/apiv1/document_view">Back to Documents</a>
     </p>
     <ul>
         <li>
             Title: {{document.title}}
         </li>
         <li>
-            Location: {{document.abstract}}
+            Location: {{document.location}}
         </li>
         <li>
             {{document.abstract}}
