--- a/API/TrainingAPI/templates/document_view.html
+++ b/API/TrainingAPI/templates/document_view.html
@@ -10,7 +10,7 @@
     <ul>
         {% for d in documents %}
         <li>
-            <a href="/apiv1/document_view/{{d.title}}/">
+            <a href="/apiv1/document_view/{{d.title}}">
                 {{d.title}}
             </a>
         </li>
